--- a/OlveczkyLabSignatures/res/values/strings.xml
+++ b/OlveczkyLabSignatures/res/values/strings.xml
@@ -4,5 +4,13 @@
     <string name="app_name">Olveczky Lab Signatures</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="Clear">Clear</string><string name="Export">Export</string>
+    <string name="one">one</string>
+    <string name="two">two</string>
+    <string name="three">three</string>
+    <string name="four">four</string>
+    <string name="five">five</string>
+    <string name="six">six</string>
+    
 
 </resources>
