--- a/OlveczkyLabSignatures/res/values/strings.xml
+++ b/OlveczkyLabSignatures/res/values/strings.xml
@@ -4,13 +4,18 @@
     <string name="app_name">Olveczky Lab Signatures</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="Clear">Clear</string><string name="Export">Export</string>
+    <string name="Clear">Clear</string>
+    <string name="Export">Export</string>
     <string name="one">one</string>
     <string name="two">two</string>
     <string name="three">three</string>
     <string name="four">four</string>
     <string name="five">five</string>
     <string name="six">six</string>
-    
+    <string name="Presenter">Presenter</string>
+    <string name="title_activity_present">PresentActivity</string>
+    <string name="title_activity_presentor">PresentorActivity</string>
+    <string name="title_activity_presenter">PresenterActivity</string>
+    <string name="title_activity_analysis">AnalysisActivity</string>
 
 </resources>
