Started work on Analysis

--- a/OlveczkyLabSignatures/res/values/strings.xml
+++ b/OlveczkyLabSignatures/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="title_activity_analysis">AnalysisActivity</string>
     <string name="Draw">Draw</string>
     <string name="Analysis">Analysis</string>
+    <string name="button_send">Send</string>
 
 </resources>
