added buttons and started graph research

--- a/OlveczkyLabSignatures/res/values/strings.xml
+++ b/OlveczkyLabSignatures/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="title_activity_analysis">AnalysisActivity</string>
     <string name="Draw">Draw</string>
     <string name="Analysis">Analysis</string>
-    <string name="button_send">Send</string>
+    <string name="button_XandTime">Plot X vs Time</string>
+    <string name="button_YandTime">Plot Y vs time</string>
 
 </resources>
